--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,11 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
-  bucket: petsgallery-<%= Rails.env %>
-  http_open_timeout: 0
-  http_read_timeout: 0
-  retry_limit: 0
+  region: us-east-2
+  bucket: petsgallery
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
